# 2026-05-20-geoai

./: .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml  requirements-cloud.txt
configs/: experiment_plan.yaml
docs/: 00_direction.md  01_latest_practice_notes.md  02_journal_targets.md  03_cloud_workflow.md  04_open_source_direction_survey.md  05_ombria_pilot.md  06_cloud_pilot_commands.md  07_experiment_protocol.md  08_feasibility_decision.md  09_colab_robustness_readout.md  10_final_experiment_plan.md  11_daily_continuation_plan.md  12_followup_local_pilot.md  13_sci_direction_plan.md  14_graceful_degradation_experiment.md  15_anchor_tuning_readout.md
notebooks/: ombria_cloud_pilot.ipynb
paper/: main.tex
references/: paper.bib
results/tables/: ombria_final_results_table.md  ombria_final_robustness_summary.csv  ombria_final_robustness_summary.md  ombria_final_run_summary.csv  ombria_followup_robustness_summary.csv  ombria_followup_robustness_summary.md  ombria_followup_run_summary.csv
scripts/: analyze_ombria_graceful.py  analyze_ombria_robustness.py  build_manifest.py  evaluate_ombria_quality_gate.py  export_ombria_prediction_panels.py  extract_ombria_reference_metrics.py  plot_ombria_results.py  plot_ombria_robustness.py  probe_ombria.py  run_ombria_anchor_tuning_matrix.sh  run_ombria_cloud_pilot.sh  run_ombria_final_matrix.sh  run_ombria_followup_matrix.sh  run_ombria_graceful_matrix.sh  run_ombria_quality_anchor_matrix.sh  run_ombria_sci_matrix.sh  summarize_ombria_runs.py  train_ombria_pixel_baseline.py  train_ombria_unet.py
(+3 files in other folders)
