[project]
name = "geoai-quickpaper"
version = "0.1.0"
description = "Reproducible code for a fast GeoAI flood mapping paper."
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
geo = [
  "rasterio>=1.3",
  "geopandas>=0.14",
  "shapely>=2.0",
]
ml = [
  "torch>=2.2",
  "torchvision>=0.17",
  "lightning>=2.2",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py39"
